# ERP_RISK_MANAGE_RAG_DEMO

./: .env.example  .gitignore  README.md  pyproject.toml  run.bat  start_services.bat  stop_services.bat
config/: tax_rules.yaml
core/: __init__.py
core/agents/: db.py  explanation.py  lineage_writer.py  risk_graph.py  risk_state.py  tax_config.py  tracing.py  vendor_repo.py
core/audit/: __init__.py  workflow.py
core/etax/: __init__.py  builder.py  models.py  validator.py
core/fraud/: __init__.py  benford.py  engine.py  models.py  patterns.py
core/journal/: __init__.py  accounts.py  engine.py  langgraph_flow.py
core/providers/: __init__.py  base.py
core/rag/: __init__.py  models.py  pipeline.py  retriever.py  semantic_chunker.py
core/rules/: __init__.py  (+4 more)
data/: golden_qa.py
loadmap/: 로드맵.md
migrations/: 002_vendor.sql  003_evidence_source_type.sql
mock/: requirements.txt  upstage_solar_api.py
scripts/: _capture_pgvector_baseline.py  _check_explanation.py  _check_generator.py  _check_golden.py  _clean_offhours_chunk.py  _clean_old_chunks.py  _run_ragas_only.py  _smoke_governance_panel.py  _test_eval_mock.py  _verify_chunks.py  capture_panels.py  compare_backends.py  download_laws.py  eval_ragas.py  fraud_confusion_matrix.py  ingest_pdf.py  ingest_synthetic_contracts.py  migrate_pgvector_to_milvus.py  record_demo.py  run_risk_detect.py  run_simulation.py  seed_vendor_master.py  test_audit_workflow.py  test_ingest.py  test_rag_quality.py  test_rule_engine.py
seed/: categories.yaml  manufacturers.yaml  product-spec-fields.yaml
tests/: conftest.py
(+110 files in other folders)
